Configure JVM arguments to suppress Mockito and CDS warnings during test execution
Co-authored-by: Junie <junie@jetbrains.com>